# sentencepiece

./: CMakeLists.txt
cmake/host/: CMakeLists.txt
cmake/template/: Config.cmake.in
src/: CMakeLists.txt
